Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P4: Low
-
Resolution: Done
-
Affects Version/s: 5.8.0, 5.9.0 Beta 1
-
Fix Version/s: 5.9.0 Beta 2
-
Component/s: Core: Plugins
-
Labels:
-
Environment:Windows 7 (mingw 5.3.0)
-
Commits:eca6f5492c4f32ad4e1df25ab923401dc5980c76 (qtbase/5.9, 13.4.2017, 5.9)
Description
A namespace build fails on Windows 7 (mingw 5.3.0).
configure script used:
configure -confirm-license -nomake tests -nomake examples -commercial -qtnamespace RTA -prefix C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase
17:22:37 g++ -Wl,-s -shared -Wl,-subsystem,windows -Wl,--out-implib,C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\plugins\platforms\libqwindows.a -o ..\..\..\..\plugins\platforms\qwindows.dll object_script.qwindows.Release -ldwmapi -lwinspool -limm32 -lwinmm -loleaut32 -lshlwapi -lshell32 -LC:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libQt5EventDispatcherSupport.a C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libQt5AccessibilitySupport.a C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libQt5FontDatabaseSupport.a -lole32 -ladvapi32 -luuid C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libqtfreetype.a C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libqtlibpng.a -lz C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libQt5ThemeSupport.a C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libQt5Gui.a C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libQt5Core.a C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libQtANGLE.a -lgdi32 -luser32 .obj\release\qwindows_resource_res.o 17:22:38 ./.obj\release\qwindowsintegration.o:qwindowsintegration.cpp:(.text+0x1d9b): undefined reference to `RTA::qInitResources_openglblacklists_RTA()'
17:22:34 g++ -shared -Wl,-subsystem,windows -Wl,--out-implib,C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\plugins\platforms\libqwindowsd.a -o ..\..\..\..\plugins\platforms\qwindowsd.dll object_script.qwindowsd.Debug -ldwmapi -lwinspool -limm32 -lwinmm -loleaut32 -lshlwapi -lshell32 -LC:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libQt5EventDispatcherSupportd.a C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libQt5AccessibilitySupportd.a C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libQt5FontDatabaseSupportd.a -lole32 -ladvapi32 -luuid C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libqtfreetyped.a C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libqtlibpngd.a -lz C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libQt5ThemeSupportd.a C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libQt5Guid.a C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libQt5Cored.a C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libQtANGLEd.a -lgdi32 -luser32 .obj\debug\qwindowsd_resource_res.o 17:22:36 ./.obj\debug\qwindowsintegration.o: In function `ZN3RTA26QWindowsIntegrationPrivateC2ERKNS_11QStringListE': 17:22:36 C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\src\plugins\platforms\windows/qwindowsintegration.cpp:213: undefined reference to `RTA::qInitResources_openglblacklists_RTA()' 17:22:36 collect2.exe: error: ld returned 1 exit status 17:22:36 17:22:36 Makefile.Debug:183: recipe for target '..\..\..\..\plugins\platforms\qwindowsd.dll' failed 17:22:36 mingw32-make[6]: *** [..\..\..\..\plugins\platforms\qwindowsd.dll] Error 1 17:22:36 mingw32-make[6]: Leaving directory 'C:/Users/qt/tmp/qt-everywhere-enterprise-src-5.9.0-beta/qtbase/src/plugins/platforms/windows' 17:22:36 Makefile:38: recipe for target 'debug-all' failed 17:22:36 mingw32-make[5]: *** [debug-all] Error 2 17:22:36 mingw32-make[5]: *** Waiting for unfinished jobs.... 17:22:37 g++ -Wl,-s -shared -Wl,-subsystem,windows -Wl,--out-implib,C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\plugins\platforms\libqwindows.a -o ..\..\..\..\plugins\platforms\qwindows.dll object_script.qwindows.Release -ldwmapi -lwinspool -limm32 -lwinmm -loleaut32 -lshlwapi -lshell32 -LC:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libQt5EventDispatcherSupport.a C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libQt5AccessibilitySupport.a C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libQt5FontDatabaseSupport.a -lole32 -ladvapi32 -luuid C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libqtfreetype.a C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libqtlibpng.a -lz C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libQt5ThemeSupport.a C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libQt5Gui.a C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libQt5Core.a C:\Users\qt\tmp\qt-everywhere-enterprise-src-5.9.0-beta\qtbase\lib\libQtANGLE.a -lgdi32 -luser32 .obj\release\qwindows_resource_res.o 17:22:38 ./.obj\release\qwindowsintegration.o:qwindowsintegration.cpp:(.text+0x1d9b): undefined reference to `RTA::qInitResources_openglblacklists_RTA()' 17:22:38 collect2.exe: error: ld returned 1 exit status 17:22:38 17:22:38 Makefile.Release:183: recipe for target '..\..\..\..\plugins\platforms\qwindows.dll' failed 17:22:38 mingw32-make[6]: *** [..\..\..\..\plugins\platforms\qwindows.dll] Error 1 17:22:38 mingw32-make[6]: Leaving directory 'C:/Users/qt/tmp/qt-everywhere-enterprise-src-5.9.0-beta/qtbase/src/plugins/platforms/windows' 17:22:38 Makefile:52: recipe for target 'release-all' failed 17:22:38 mingw32-make[5]: *** [release-all] Error 2 17:22:38 mingw32-make[5]: Leaving directory 'C:/Users/qt/tmp/qt-everywhere-enterprise-src-5.9.0-beta/qtbase/src/plugins/platforms/windows' 17:22:38 Makefile:90: recipe for target 'sub-windows-make_first' failed 17:22:38 mingw32-make[4]: *** [sub-windows-make_first] Error 2 17:22:38 mingw32-make[4]: Leaving directory 'C:/Users/qt/tmp/qt-everywhere-enterprise-src-5.9.0-beta/qtbase/src/plugins/platforms' 17:22:38 Makefile:95: recipe for target 'sub-platforms-make_first' failed 17:22:38 mingw32-make[3]: *** [sub-platforms-make_first] Error 2 17:22:38 mingw32-make[3]: Leaving directory 'C:/Users/qt/tmp/qt-everywhere-enterprise-src-5.9.0-beta/qtbase/src/plugins' 17:22:38 Makefile:795: recipe for target 'sub-plugins-make_first' failed 17:22:38 mingw32-make[2]: *** [sub-plugins-make_first] Error 2 17:22:38 mingw32-make[2]: Leaving directory 'C:/Users/qt/tmp/qt-everywhere-enterprise-src-5.9.0-beta/qtbase/src' 17:22:38 Makefile:42: recipe for target 'sub-src-make_first' failed 17:22:38 mingw32-make[1]: *** [sub-src-make_first] Error 2 17:22:38 mingw32-make[1]: Leaving directory 'C:/Users/qt/tmp/qt-everywhere-enterprise-src-5.9.0-beta/qtbase' 17:22:38 Makefile:76: recipe for target 'module-qtbase-make_first' failed 17:22:38 mingw32-make: *** [module-qtbase-make_first] Error 2